# streamlit-deploy

./: Dashboard.py  Dockerfile  dash.py  dash2.py  dashgood.py  dashidnew.py  exoplanet_model.keras  iddash.py  pyproject.toml  str.py
.devcontainer/: devcontainer.json
light_curves_csv/: star_34.csv  star_37.csv  star_40.csv  star_46.csv
